Update button labels to indicate OFF state

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <h2>Resolución: 1200 DPI</h2>
         
         <div class="buttons">
-            <button id="normalMode" class="btn">🔹 Modo Normal</button>
-            <button id="gameMode" class="btn">🎮 Modo Juegos</button>
-            <button id="ffMode" class="btn">🔥 Modo Free Fire (1200 Sens)</button>
+            <button id="normalMode" class="btn">🔹 Modo Normal OFF</button>
+            <button id="gameMode" class="btn">🎮 Modo Juegos OFF</button>
+            <button id="ffMode" class="btn">🔥 Modo Free Fire OFF</button>
         </div>
         
         <div id="status" class="status">Selecciona un modo para activar</div>
@@ -23,4 +23,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
